[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Jarkko Mourujarvi <jarkko@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "01-01"
path = "src/01/part1.rs"

[[bin]]
name = "01-02"
path = "src/01/part2.rs"

[[bin]]
name = "02-01"
path = "src/02/part1.rs"

[[bin]]
name = "02-02"
path = "src/02/part2.rs"

[[bin]]
name = "03-01"
path = "src/03/part1.rs"

[[bin]]
name = "03-02"
path = "src/03/part2.rs"

[[bin]]
name = "04-01"
path = "src/04/part1.rs"

[[bin]]
name = "04-02"
path = "src/04/part2.rs"

[[bin]]
name = "05-01"
path = "src/05/part1.rs"

[[bin]]
name = "05-02"
path = "src/05/part2.rs"

[[bin]]
name = "06-01"
path = "src/06/part1.rs"

[[bin]]
name = "06-02"
path = "src/06/part2.rs"

[[bin]]
name = "07-01"
path = "src/07/part1.rs"

[[bin]]
name = "07-02"
path = "src/07/part2.rs"

[[bin]]
name = "08-01"
path = "src/08/part1.rs"

[[bin]]
name = "08-02"
path = "src/08/part2.rs"

[[bin]]
name = "09-01"
path = "src/09/part1.rs"

[[bin]]
name = "09-02"
path = "src/09/part2.rs"

[[bin]]
name = "10-01"
path = "src/10/part1.rs"

[[bin]]
name = "11-01"
path = "src/11/part1.rs"

[[bin]]
name = "11-02"
path = "src/11/part2.rs"

[[bin]]
name = "12-01"
path = "src/12/part1.rs"

[[bin]]
name = "12-02"
path = "src/12/part2.rs"

[[bin]]
name = "13-01"
path = "src/13/part1.rs"

[[bin]]
name = "13-02"
path = "src/13/part2.rs"

[[bin]]
name = "14-01"
path = "src/14/part1.rs"

[[bin]]
name = "14-02"
path = "src/14/part2.rs"

[[bin]]
name = "15-01"
path = "src/15/part1.rs"

[[bin]]
name = "15-02"
path = "src/15/part2.rs"

[[bin]]
name = "16-01"
path = "src/16/part1.rs"

[[bin]]
name = "16-02"
path = "src/16/part2.rs"

[[bin]]
name = "17-01"
path = "src/17/part1.rs"

[[bin]]
name = "17-02"
path = "src/17/part2.rs"
